Fix font size overflow text

--- a/styles.css
+++ b/styles.css
@@ -98,94 +98,98 @@ Set the font-family content used for the HTML content.
 }
 
 /* Set droplist names - -item is the currently selected font size, -label is the font size's appearance in the droplist*/
+/*
+content is the text that appears in the droplist.
+font-size is the size of the text that appears in the droplist.
+*/
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="12px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="12px"]::before {
-  content: "12px";
-  font-size: 12px;
+  content: "12";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="13px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="13px"]::before {
-  content: "13px";
-  font-size: 13px;
+  content: "13";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="14px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="14px"]::before {
-  content: "14px";
+  content: "14";
   font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="15px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="15px"]::before {
-  content: "15px";
-  font-size: 15px;
+  content: "15";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="16px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="16px"]::before {
-  content: "16px";
-  font-size: 16px;
+  content: "16";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="17px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="17px"]::before {
-  content: "17px";
-  font-size: 17px;
+  content: "17";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="18px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="18px"]::before {
-  content: "18px";
-  font-size: 18px;
+  content: "18";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="19px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="19px"]::before {
-  content: "19px";
-  font-size: 19px;
+  content: "19";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="20px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="20px"]::before {
-  content: "20px";
-  font-size: 20px;
+  content: "20";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="24px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="24px"]::before {
-  content: "24px";
-  font-size: 24px;
+  content: "24";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="28px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="28px"]::before {
-  content: "28px";
-  font-size: 28px;
+  content: "28";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="32px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="32px"]::before {
-  content: "32px";
-  font-size: 32px;
+  content: "32";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="48px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="48px"]::before {
-  content: "48px";
-  font-size: 48px;
+  content: "48";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="52px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="52px"]::before {
-  content: "52px";
-  font-size: 52px;
+  content: "52";
+  font-size: 14px;
 }
 
 .ql-snow .ql-picker.ql-size .ql-picker-label[data-value="64px"]::before,
 .ql-snow .ql-picker.ql-size .ql-picker-item[data-value="64px"]::before {
-  content: "64px";
-  font-size: 64px;
+  content: "64";
+  font-size: 14px;
 }
 
 .submit-button {
